# pyppl_notify

./: .tagitrc  README.md  pyppl-notify.py  pyppl_notify.py  pyproject.toml  tox.ini
tests/: test_notify.py
