[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyppl_notify"
version = "0.0.1"
description = "Email notification for PyPPL"
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/pyppl_notify"
repository = "https://github.com/pwwang/pyppl_notify"
packages = [{include = "pyppl_notify.py"}]

[tool.poetry.dependencies]
python = "^3.6"
pyppl = "3.*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

